<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_1"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@drawable/custom_border">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/my_color"/>
            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="Username"
                android:textSize="20sp"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Password"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/showPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Show Password"
                android:textSize="20sp"
                android:textColor="@color/my_color"
                android:layout_marginTop="10dp"/>
            <CheckBox
                android:id="@+id/remLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remember Login"
                android:textSize="20sp"
                android:textColor="@color/my_color"/>

            <Button
                android:id="@+id/login_signin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Login"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/my_color"
                app:cornerRadius = "20dp"/>
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password?"
                android:layout_gravity="center"
                android:padding="2dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/my_color"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Not yet registered? Sign Up"
                android:layout_gravity="center"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/my_color"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>