<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background_1">

...
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/addModeratorCard"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:focusable="true"
...
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/add_moderator"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/moderatorListCard"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp">
...
