<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addModeratorPage"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_1"
    tools:context=".ModeratorFormActivity"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
                <TextView
                    android:id="@+id/textTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Moderator Form"
                    android:textColor="@color/my_color"
                    android:textSize="40dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"/>
                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="400px"
                    android:layout_height="400px"
                    android:src="@drawable/profile"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"/>
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Full Name"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextbackground"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:drawableStart="@drawable/baseline_name_24"
                    android:drawablePadding="8dp"/>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextbackground"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"/>
                <EditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Contact No."
                    android:inputType="phone"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextbackground"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:drawablePadding="8dp"/>
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Home Address"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextbackground"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:drawableStart="@drawable/baseline_home_24"
                    android:drawablePadding="8dp"/>
                <EditText
                    android:id="@+id/bloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Blood Group"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextbackground"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:drawableStart="@drawable/baseline_blood_24"
                    android:drawablePadding="8dp"/>
                <EditText
                    android:id="@+id/userId"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Username"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/edittextbackground"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:drawableStart="@drawable/baseline_person_pin_24"
                    android:drawablePadding="8dp"/>
                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="Register"
                    android:textSize="20sp"
                    android:backgroundTint="@color/my_color"
                    app:cornerRadius="15dp"/>
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="Cancel"
                    android:textSize="20sp"
                    android:backgroundTint="@color/my_color"
                    android:layout_marginBottom="10dp"
                    app:cornerRadius="15dp"/>
            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>