<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moderatorListPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeratorListActivity"
    android:background="@drawable/background_1"
    android:orientation="vertical">

...
